--- a/Project.Blog.Dto/Project.Blog.Dto.csproj
+++ b/Project.Blog.Dto/Project.Blog.Dto.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CategoryDtos\" />
+    <Compile Remove="CategoryDtos\**" />
+    <EmbeddedResource Remove="CategoryDtos\**" />
+    <None Remove="CategoryDtos\**" />
   </ItemGroup>
 
 </Project>
